--- a/src/ma/enset/tpjdbc/presentation/views/Commande.fxml
+++ b/src/ma/enset/tpjdbc/presentation/views/Commande.fxml
@@ -13,9 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="ma.enset.tpjdbc.presentation.controllers.CommandeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ma.enset.tpjdbc.presentation.controllers.CommandeController">
    <top>
       <VBox prefHeight="131.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -57,9 +55,9 @@ fx:controller="ma.enset.tpjdbc.presentation.controllers.CommandeController">
                         <Insets left="50.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField prefHeight="25.0" prefWidth="222.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <TextField prefHeight="25.0" prefWidth="351.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
-                        <Insets left="5.0" right="20.0" />
+                        <Insets right="20.0" />
                      </GridPane.margin>
                   </TextField>
                   <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
@@ -143,6 +141,7 @@ fx:controller="ma.enset.tpjdbc.presentation.controllers.CommandeController">
                   </Button>
                </children>
             </HBox>
+
          </children>
       </VBox>
    </center>
