--- a/src/ma/enset/tpjdbc/presentation/views/Produit.fxml
+++ b/src/ma/enset/tpjdbc/presentation/views/Produit.fxml
@@ -68,22 +68,22 @@ fx:controller="ma.enset.tpjdbc.presentation.controllers.ProduitController">
                         <Insets left="50.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField GridPane.columnIndex="1">
+                  <TextField fx:id="nom" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="5.0" right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <TextField fx:id="description" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="5.0" right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <TextField fx:id="prix" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="5.0" right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="3">
+                  <TextField fx:id="quantite" GridPane.columnIndex="1" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="5.0" right="10.0" />
                      </GridPane.margin>
@@ -135,6 +135,14 @@ fx:controller="ma.enset.tpjdbc.presentation.controllers.ProduitController">
       </VBox>
    </top>
    <center>
-      <fx:include source="Produit.fxml"></fx:include>
+      <TableView fx:id="tableP" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <columns>
+            <TableColumn fx:id="colNom" prefWidth="138.0" text="Nom" />
+            <TableColumn fx:id="colDes" prefWidth="267.0" text="Description" />
+            <TableColumn fx:id="colPrix" minWidth="0.0" prefWidth="97.0" text="Prix" />
+            <TableColumn fx:id="colQua" prefWidth="97.0" text="Quantite" />
+         </columns>
+      </TableView>
+
    </center>
 </BorderPane>
