--- a/src/ma/enset/tpjdbc/presentation/views/TableClient.fxml
+++ b/src/ma/enset/tpjdbc/presentation/views/TableClient.fxml
@@ -8,11 +8,12 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 
-<TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+<TableView fx:id="tableC" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"
+           fx:controller="ma.enset.tpjdbc.presentation.controllers.MainController" xmlns:fx="http://javafx.com/fxml/1">
     <columns>
-        <TableColumn prefWidth="97.0" text="Nom" />
-        <TableColumn prefWidth="119.0" text="Prenom" />
-        <TableColumn minWidth="0.0" prefWidth="208.0" text="Email" />
-        <TableColumn prefWidth="175.0" text="Tele" />
+        <TableColumn fx:id="colNom" prefWidth="97.0" text="Nom" />
+        <TableColumn fx:id="colPrenom" prefWidth="119.0" text="Prenom" />
+        <TableColumn fx:id="colemail" minWidth="0.0" prefWidth="208.0" text="Email" />
+        <TableColumn fx:id="colTele" prefWidth="175.0" text="Tele" />
     </columns>
 </TableView>
